respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Inventory_Exit__c.object
<CustomObject>
    <fields>
        <fullName>Account_for_Customer__c</fullName>
        <formula>Shipment__r.Account_for__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account for (Customer)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Entry__c</fullName>
        <label>Inventory Entry</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Warehouse__c</field>
                <operation>equals</operation>
                <valueField>Inventory_Entry__c.Warehouse__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Inventory_Entry__c</referenceTo>
        <relationshipLabel>Inventory Exits</relationshipLabel>
        <relationshipName>Inventory_Exits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <formula>Item__r.Sourcing_Item_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <formula>Item__r.Item_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Sourcing_Item__c</referenceTo>
        <relationshipLabel>Inventory Exits</relationshipLabel>
        <relationshipName>Shipment_Picking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Material_Request__c.Component_Item__c</field>
                <operation>equals</operation>
                <valueField>$Source.Item__c</valueField>
            </filterItems>
            <filterItems>
                <field>Material_Request__c.Production_Plan__c</field>
                <operation>equals</operation>
                <valueField>$Source.Production_Plan__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Material_Request__c</referenceTo>
        <relationshipName>Picks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Plan</label>
        <referenceTo>Production_Order__c</referenceTo>
        <relationshipName>Picks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <formula>Shipment_Item_Line__r.Shipment__r.Route__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As found in &quot;Route&quot; inside &quot;Shipment Cargo Line&quot;</inlineHelpText>
        <label>Route</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Item_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Cargo Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Item__c</field>
                <operation>equals</operation>
                <valueField>Shipment_Line__c.Item_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shipment_Line__c</referenceTo>
        <relationshipLabel>Inventory Exits</relationshipLabel>
        <relationshipName>Shipment_Picking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Number__c</fullName>
        <formula>Shipment_Item_Line__r.Shipment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As found in &quot;Shipment&quot; inside &quot;Shipment Cargo Line&quot;</inlineHelpText>
        <label>Shipment Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Inventory Exits</relationshipLabel>
        <relationshipName>Inventory_Exits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_of_Load__c</fullName>
        <formula>Shipment_Item_Line__r.Shipment__r.Site_of_Load__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As found in &quot;Site of Load&quot; inside &quot;Shipment Item Line&quot;</inlineHelpText>
        <label>Site of Load</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units_Picked__c</fullName>
        <label>Units Picked</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehouse_Exit_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse Exit Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Warehouse__c</field>
                <operation>equals</operation>
                <valueField>Warehouse_Exit_Order__c.Warehouse__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Warehouse_Exit_Order__c</referenceTo>
        <relationshipLabel>Inventory Exits</relationshipLabel>
        <relationshipName>Inventory_Exits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse_Storage_Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse Storage Bin</label>
        <referenceTo>Warehouse_Storage_Bin__c</referenceTo>
        <relationshipName>Shipment_Picking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Inventory Exits</relationshipLabel>
        <relationshipName>Inventory_Exits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wharehouse_Location__c</fullName>
        <formula>Warehouse_Storage_Bin__r.Warehouse__r.Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As found in &quot;Location&quot; inside &quot;Warehouse Storage Bin&quot;</inlineHelpText>
        <label>Warehouse Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wharehouse_Name__c</fullName>
        <formula>Warehouse_Storage_Bin__r.Warehouse__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As found in &quot;Warehouse&quot; inside &quot;Warehouse Storage Bin&quot;</inlineHelpText>
        <label>Warehouse Name</label>
        <type>Text</type>
    </fields>
    <label>Inventory Exit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IEX-{00000}</displayFormat>
        <label>IEX Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Exits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>